syntax="proto3";

package v1;

option go_package="./;v1";

service FiberService{
    rpc Signup(SignupRequest) returns (SignupResponse){};
    rpc Login(LoginRequest) returns (LoginResponse){};
}

message SignupRequest{
   string username=1;
   string password=2;
   string email=3;
}
message SignupResponse{
    int64 statusCode=1;
    string msg=2;
}
message LoginRequest{
    string username=1;
    string password=2;
    string email=3;
}
message LoginResponse{
    int64 statusCode=1;
    string msg=2;
}